# fit-and-easy

./: .gitignore  README.md  RESTRUCTURE_SUMMARY.md  database.py  database_v2.py  demo_enhanced_queries.py  generate_docs.py  main.py  main_v2.py  models.py  models_v2.py  openapi.json  pyproject.toml  requirements.txt  seed_data.py  seed_data_v2.py  test_api.py  trainer_app.db  trainer_app_structured.db  trainer_app_v2.db
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: users.py
app/core/: __init__.py  config.py  database.py
app/models/: __init__.py  base.py  enums.py  exercise.py  user.py  workout.py
app/schemas/: __init__.py  common.py  exercise.py  user.py  workout.py
app/services/: user_service.py
database/: __init__.py
database/migrations/: migration_script.py
database/seeds/: __init__.py  exercises.py  muscle_groups.py
docs/: DATABASE_SETUP.md  ENHANCED_MODEL_SUMMARY.md  PROPOSED_STRUCTURE.md  view_docs.md
docs/api/: openapi.yaml
requirements/: base.txt  development.txt  production.txt
scripts/: __init__.py  demo_new_structure.py  setup_database.py
tests/legacy/: test_enhanced_api.py
